adicionado algumas verificações

--- a/projeto_final/templates/cadastro.html
+++ b/projeto_final/templates/cadastro.html
@@ -17,7 +17,7 @@
 		{{ formCadastro.usuario.label }}
 		{{ formCadastro.usuario }}
 		{{ formCadastro.email.label }}
-		{{ formCadastro.email }}
+		{{ formCadastro.email(placeholder="@gmail.com") }}
 		{{ formCadastro.telefone.label }}
 		{{ formCadastro.telefone }}
 		{{ formCadastro.senha.label }}
