--- a/projeto_final/static/css/cadastro_jogos.css
+++ b/projeto_final/static/css/cadastro_jogos.css
@@ -64,11 +64,6 @@ input[type="text"]:hover {
     transform: scale(1.05);
 }
 
-input[type="text"]:focus {
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-  transform: scale(1.1);
-}
-
 input[type="text"]:valid{
     background-color: #c8e6c9;
 }
@@ -140,4 +135,66 @@ a:hover img{
     border: 2px solid rgb(255, 136, 0);
     padding: 5px;
     border-radius: 6px;
+}
+
+#confirmarCapa {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.card{
+width: 280px;
+border-radius: 10px;
+margin: 20px 40px;
+background-color: #05044b;
+overflow: hidden;
+}
+
+.card img{
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
+}
+
+.card .content{
+    padding: 10px;
+}
+
+.card .info{
+    border-top: 2px solid #35047e;
+    padding: 5px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+.card .info a{
+    display: inline-block;
+    padding: 10px 20px;
+    margin: 20px 0;
+    border: 1px solid #00aeff;
+    text-decoration: none;
+    font-weight: 700;
+    border-radius: 5px;
+    color: #fff;
+    letter-spacing: 1px;
+    font-size: 12px;
+}
+
+
+.card .info a:hover{
+    background: #00aeff;
+    border: none;
+    color: #171733;
+    box-shadow: 0 0 10px #00aeff;
+    transition: background-color 0.3s ease-in-out
+}
+
+.card.hide{
+    display: none;
+
+
 }
