adicionado o editar jogos

--- a/projeto_final/templates/tela_main.html
+++ b/projeto_final/templates/tela_main.html
@@ -54,6 +54,7 @@
             <!-- Conteúdo da janela da conta -->
             <h2>Adm</h2>
             <a class="modal-close" href="{{ url_for('cadastrar_jogos') }}">Cadastrar Jogos</a>
+            <a class="modal-close" href="{{ url_for('jogos_cadastrados') }}">Editar Jogos</a>
             <a class="modal-close" href="{{ url_for('usuarios') }}">Deletar Contas</a>
             <a class="modal-close">Fechar</a>
         </div>
